[package]
name = "wdg-uri"
description = "URI"
version = "0.1.11"
authors = ["Grigoriy Baranov <baranov@w3m.co>"]
license = "MIT"
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "README.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"