[package]
name = "wdg-uri"
description = "URI"
version = "0.1.24"
authors = ["Grigoriy Baranov <baranov@w3m.co>"]
repository = "https://github.com/WatchDG/rust-uri"
license = "MIT"
edition = "2018"

exclude = [
    ".github",
    ".gitignore",
    "README.md"
]

[dependencies]
string-repr = "1.0.1"
regex = "1.3.4"
lazy_static = "1.4.0"